// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-parents Renders \`extra-details-parents\` with full parents 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div class="text-md-center"><strong>Meta alarm</strong>
    <div class="layout column">
      <div>Rules&nbsp;:</div>
      <div class="rule-name">&nbsp;parent-rule-1-name</div>
      <div class="rule-name">&nbsp;parent-rule-2-name</div>
      <div class="rule-name">&nbsp;parent-rule-3-name</div>
    </div>
    <div>Causes : 3</div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge brown darken-1 white--text material-icons theme--light" style="font-size: 16px;">center_focus_weak</i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` without rules 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div class="text-md-center"><strong>Meta alarm</strong>
    <div class="layout column">
      <div>Rules&nbsp;:</div>
    </div>
    <div>Causes : 3</div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge brown darken-1 white--text material-icons theme--light" style="font-size: 16px;">center_focus_weak</i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;
